Add role-based controllers and services, update auth & payment integration